Change how sublime files are ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@ Thumbs.db
 
 # Application files #
 #####################
-*.sublime-project
-*.sublime-workspace
+*.sublime-*
 sftp-config.json
 scratchpad.htm
